fix xs screen on small device button overlap in detail page

--- a/nut/static/css/web/style.css
+++ b/nut/static/css/web/style.css
@@ -203,15 +203,16 @@ a:hover{text-decoration:none;}
 
 
 /*商品详情页*/
-.heart{width: 120px; height: 42px;border-radius: 8px;line-height: 42px;text-align: center;float: left; background: #F7F7F7;}
+.heart{width: 120px; height: 42px;border-radius: 8px;line-height: 42px;text-align: center; background: #F7F7F7;}
 .goods_detail{margin-top: 112px;}
 .goods_detail a:hover{text-decoration: none;}
 .goods_detail .tips{height: 37px;}
 .goods_detail .tips ul li{float: left;}
-.goods_detail .detail_pic{width: 100%;padding-bottom: 40px;border-bottom: 1px solid #E6E6E6;}
+.goods_detail .detail_pic{width: 100%;}
 .goods_detail .detail_pic img{width: 100%;border: 1px solid #f0f0f0;}
-.goods_detail .detail_pic .goods_name{padding:40px 0;}
-.goods_detail .detail_pic .operate{height: 42px;width: 100%;}
+.goods_detail .goods_name{padding:40px 0;}
+.goods_detail .detail_pic .operate{width: 100%;}
+.goods_detail .detail_middle{padding-bottom: 40px;border-bottom: 1px solid #E6E6E6;}
 .goods_detail .report_link{float: right;  margin-top: 25px;}
 .goods_detail .comment_list{padding-top: 40px;width: 100%;}
 .goods_detail .comment_list li{width: 100%;padding-bottom: 40px;}
@@ -258,3 +259,55 @@ a:hover{text-decoration:none;}
 .friendly_link{margin-top: 40px;overflow: hidden;}
 .friendly_link li {float: left;margin:0 20px 20px 0;}
 .friendly_link li img{width: 200px;height: 100px;}
+
+/*add  by ant for detial page button */
+.grey-button{
+    font-size:17px;
+    height: 42px;
+    border-radius: 5px;
+    line-height: 42px;
+    text-align: center;
+    background: #F7F7F7;
+}
+
+.blue-button{
+    font-size:17px;
+    height: 42px;
+    border-radius: 5px;
+    line-height: 42px;
+    text-align: center;
+    background:#427EC0;
+    color:#fff;
+    margin-top:20px;
+}
+
+.buy_link{
+    color: #fff;
+    font-size: 18px;
+}
+
+.buy_link span{
+    font : 22px Georgia,serif;
+}
+
+.buy_link i{
+    color:#fff;
+
+}
+
+.buy_link i:hover{
+    color:#fff;
+}
+
+.buy_link:hover{
+    color: #fff;
+
+}
+
+/*for detail page xs screen quick fix*/
+
+.note-comment-list{
+    margin-top: 10px;
+}
+
+/*for note-comment-list*/
